Fixes type in Integrals notebook

--- a/2020/programming/Integrals.ipynb
+++ b/2020/programming/Integrals.ipynb
@@ -48,7 +48,7 @@
     "\\end{equation}\n",
     "Here the integral can be $(\\mathbf a | \\mathbf b)$ can be factored as\n",
     "\\begin{equation}\n",
-    "(\\mathbf a | \\mathbf b) = \\kappa_{ab}\\ I_x(n_{ax},n_{bx},n_{cx})\\ I_y(n_{ay},n_{by},n_{cy})\\ I_z(n_{az},n_{bz},n_{cz})\n",
+    "(\\mathbf a | \\mathbf b) = \\kappa_{ab}\\ I_x(n_{ax},n_{bx})\\ I_y(n_{ay},n_{by})\\ I_z(n_{az},n_{bz})\n",
     "\\end{equation}\n",
     "where\n",
     "\\begin{align}\n",
