Update to the Integrals notebook

--- a/2020/programming/Integrals.ipynb
+++ b/2020/programming/Integrals.ipynb
@@ -72,7 +72,7 @@
     "\\begin{equation}\n",
     "\\frac{1}{2\\alpha_a}\\ \\frac{\\partial}{\\partial A_i} I_i(n_{ai}, n_{bi}) = n_{ai}\\left\\{\\frac{1}{2\\alpha} - \\frac{1}{2\\alpha_a}\\right\\} I_i(n_{ai} - 1, n_{bi}) + n_{bi} \\frac{1}{2\\alpha} I_i(n_{ai}, n_{bi} - 1)\n",
     "\\end{equation}\n",
-    "Substituting these two equations into the either expression for $(\\mathbf a+\\mathbf 1_i|\\mathbf b)$ yields\n",
+    "Substituting these two equations into the either expression for $(\\mathbf a+\\mathbf 1_i|\\mathbf b)$ yields the following recursion relations. **The following three equations are what you need to program:**\n",
     "\\begin{equation}\n",
     "(\\mathbf a+\\mathbf 1_i|\\mathbf b) = (P_i - A_i)(\\mathbf a|\\mathbf b) + \\frac{1}{2\\alpha} N_i(\\mathbf a)(\\mathbf a-\\mathbf 1_i|\\mathbf b) + \\frac{1}{2\\alpha} N_i(\\mathbf b)(\\mathbf a|\\mathbf b-\\mathbf 1_i)\n",
     "\\end{equation}\n",
@@ -88,6 +88,7 @@
     "Given the recursive equations given above it should seen that the recursion only depends on $\\mathbf P-\\mathbf A$, $\\mathbf P-\\mathbf B$, $\\alpha$, and the target angular momentum of $\\mathbf a$ and $\\mathbf b$. The starting point of the recursion $(\\mathbf 0_A | \\mathbf 0_B)$ can be accounted for after the recursion has been performed.\n",
     "\n",
     "### Recurrence expressions for overlap integrals over $s$, $p$, and $d$  Cartesian Gaussian funcions\n",
+    "To serve as an example of the recurrence relations here are the explicit equations for several cases worked out. This may aid you in the implementation of your recursion function.\n",
     "\\begin{align}\n",
     "(s|s) =& \\left(\\frac{\\pi}{\\alpha}\\right)^{3/2} \\exp\\left\\{-\\xi(\\mathbf A-\\mathbf B)^2\\right\\} \\\\\n",
     "(p_i|s) =& (P_i - A_i)(s|s) \\\\\n",
@@ -120,7 +121,7 @@
     "\\begin{equation}\n",
     "(0|0) = \\int G(\\alpha_1, \\mathbf A, l_1, m_1, n_1) G(\\alpha_2, \\mathbf B, l_2, m_2, n_2)\\ d\\tau\n",
     "\\end{equation}\n",
-    "The symbol $<+\\mathrm{n}|0>_{\\mathrm{x}}$ will denote an integral of the form given by the above equation, except that the quantum number $l_1$ has been incremented by n. Similar notations will apply to the $m_1$ and $n_1$ quantum numbers by the use of subscripts x and y.  We will also use the symbols $<0|+\\mathrm{n}>_{\\mathrm{x}}$, where we have incremented the quantum number $l_2$ by n. You should see the pattern.\n",
+    "The symbol $(+\\mathrm{n}|0)_{\\mathrm{x}}$ will denote an *overlap integral* of the form given by the above equation, except that the quantum number $l_1$ has been incremented by n. Similar notations will apply to the $m_1$ and $n_1$ quantum numbers by the use of subscripts x and y.  We will also use the symbols $(0|+\\mathrm{n})_{\\mathrm{x}}$, where we have incremented the quantum number $l_2$ by n. You should see the pattern.\n",
     "\n",
     "The kinetic energy integral is defined as\n",
     "\\begin{equation}\n",
@@ -161,7 +162,7 @@
     "\n",
     "You can obtain the nuclear contribution to the dipole $\\mu_{\\mathrm{nuclear}}$ from Psi4 using\n",
     "\n",
-    "    psi4.core.nuclear_dipole(molecule).to_array()\n",
+    "    nucdip = molecule.nuclear_dipole()\n",
     "\n",
     "#### The total dipole moment\n",
     "\\begin{equation}\n",
