major changes to wicks theorem exercises

--- a/2020/exercises/tex/3_Wicks_Theorem_exercises.tex
+++ b/2020/exercises/tex/3_Wicks_Theorem_exercises.tex
@@ -28,21 +28,21 @@
 \noindent
 \begin{enumerate}
 \item Show the following are true: 
- \[ \contraction{n[}{a}{{}_p a_q}{a}
-\contraction[2ex]{n[a_p }{a}{{}_q a_r\dg a_s }{a}
+ \[ \bcontraction{n[}{a}{{}_p a_q}{a}
+\bcontraction[2ex]{n[a_p }{a}{{}_q a_r\dg a_s }{a}
 n[a_p a_q a_r\dg a_s a_t\dg a_u\dg]  = -\delta_{pr}\delta_{qt} a_u\dg a_s\] 
- \[ \contraction{n[}{a}{{}_p a_q}{a}
-\contraction[2ex]{n[a_p }{a}{{}_q a_r\dg a_s }{a}
-\contraction{n[a_p a_q a_r\dg }{a}{{}_s a_t\dg }{a}
+ \[ \bcontraction{n[}{a}{{}_p a_q}{a}
+\bcontraction[2ex]{n[a_p }{a}{{}_q a_r\dg a_s }{a}
+\bcontraction{n[a_p a_q a_r\dg }{a}{{}_s a_t\dg }{a}
 n[a_p a_q a_r\dg a_s a_t\dg a_u\dg]  = \delta_{pr}\delta_{qt} \delta_{su}\] 
 % Note here that the term is \textit{fully contracted} and reduces to a number
 
 \item Show that
-\[\contraction{}{a}{{}_p}{a}a_p a_q\dg = n[\contraction{}{a}{{}_p}{a}a_p a_q\dg]\]
+\[\bcontraction{}{a}{{}_p}{a}a_p a_q\dg = n[\bcontraction{}{a}{{}_p}{a}a_p a_q\dg]\]
 
 
 \item Show that $a_p a_q\dg a_r\dg  = \delta_{pq}a_r\dg - \delta_{pr} a_q\dg +  a_q\dg a_r\dg a_p$ can be rewritten as:
-\[a_p a_q\dg a_r\dg  = n[a_p a_q\dg a_r\dg ] + n[\contraction{}{a}{{}_p}{a} a_p a_q\dg a_r\dg ]  + n[\contraction{}{a}{{}_p a_q\dg}{a} a_p a_q\dg a_r\dg ] \]
+\[a_p a_q\dg a_r\dg  = n[a_p a_q\dg a_r\dg ] + n[\bcontraction{}{a}{{}_p}{a} a_p a_q\dg a_r\dg ]  + n[\bcontraction{}{a}{{}_p a_q\dg}{a} a_p a_q\dg a_r\dg ] \]
 
 \item Explicitly write out Wick's theorem for a general product of 3 operators, $x_1 x_2 x_3$. If you want more practice, try writing out Wick's theorem for a general product of 5 operators. 
 
